<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/title_movies" />

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_tv"
        android:title="@string/title_tvshow" />

    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/ic_baseline_bookmarks_24"
        android:title="@string/title_bookmark" />

</menu>